# KPL-compiler

./: .gitignore  CMakeLists.txt  README.md  a.out  charcode.h  error.h  package-lock.json  package.json  reader.c  reader.h  scanner.c  script.sh  Đề-cương_XDCTD_ViệtNhật.docx
1.2_scanner/: CMakeLists.txt  scanner.c
1.2_scanner/test/: example2.changed.kpl  result2.changed.txt  result2.txt
1_scanner/: CMakeLists.txt  README.md  charcode.c  charcode.h  error.c  error.h  reader.c  scanner.c  token.h
1_scanner/test/: example4_.kpl
1b_scanner/: README.md  scanner.c
2_parser/: CMakeLists.txt  error.c  main.c  parser.c
2_parser/Test/: Assignment1.kpl  example1.kpl  example2.copy.kpl  example2.copy2.kpl  example2.copy3.kpl  example5.kpl.txt  result2.copy.txt  sum.kpl  test1.kpl
2b_parser/: CMakeLists.txt  parser.c
2c_parser_completed/: CMakeLists.txt  Makefile.win  parser.c
3.1_symtab/: CMakeLists.txt  README.md  main.c  symtab.c  symtab.h
3.2_symtab/: CMakeLists.txt  debug.c  parser.c  symtab.c  symtab.h
3.2_symtab/tests/: example1.copy.kpl
3.3_semantic/: CMakeLists.txt  parser.c  semantics.c
3.3_semantic/tests/: example1.copy.kpl  example3.copy.kpl
3.4_typechecker/: CMakeLists.txt  parser.c  semantics.c
3.4_typechecker/tests/: example2.copy.kpl  example3.copy.kpl  example4.copy.kpl  example4.copy2.kpl  example6.copy.kpl  example6.kpl
completed/: PTCP_completed.rar
incompleted/: PTCP_incompleted.rar  PTNN1_incompleted.rar  PTNN2_incompleted.rar  PTNN3_incompleted.rar  PTNN4_incompleted.rar  PTTV_incompleted.rar
